zinal/tests/errors/incorrect_prop_type.stderr
error[E0422]: cannot find struct, variant or union type `Example` in this scope
  --> tests/errors/incorrect_prop_type.rs:18:9
   |
18 |         Example { prop: 8 }
   |         ^^^^^^^ not found in this scope

error[E0308]: mismatched types
  --> tests/errors/incorrect_prop_type.rs:3:10
   |
3  | #[derive(Template)]
   |          ^^^^^^^^- help: try using a conversion method: `.to_string()`
   |          |
   |          expected `String`, found `u8`
   |          arguments to this method are incorrect
   |
note: method defined here
  --> tests/errors/incorrect_prop_type.rs:12:5
   |
9  | #[derive(Template)]
   |          --------
...
12 |     prop: String,
   |     ^^^^
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
